04_wordpress_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment
  namespace: dario
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - name: wordpress
          image: wordpress:apache
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: wordpress-pv
              mountPath: /var/www/html
      volumes:
        - name: wordpress-pv
          persistentVolumeClaim:
            claimName: cephfs-pvc
            readOnly: false
