06_services.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    run: wordpress
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    run: wordpress
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    run: mysql
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  selector:
    run: mysql
